tests/ui/typeck/duplicate_overloaded_items.stderr
error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E1();
   |       ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E1();
   |       ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E2(uint);
   |       ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E2(uint);
   |       ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E3(uint);
   |       ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E3(uint) anonymous;
   |       ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E4(uint);
   |       ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | event E4(uint indexed);
   |       ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f1() {}
   |          ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f1() {}
   |          ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2() {}
   |          ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2() {}
   |          ^^
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2() {}
   |          ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2_2(uint) {}
   |          ^^^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f2_2(uint) {}
   |          ^^^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f5(int) {}
   |          ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f5(int) {}
   |          ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f6(string memory) {}
   |          ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f6(string calldata) {}
   |          ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E1();
   |           ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E1();
   |           ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E2(uint);
   |           ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E2(uint);
   |           ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E3(uint);
   |           ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E3(uint) anonymous;
   |           ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E4(uint);
   |           ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E4(uint indexed);
   |           ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f1() public {}
   |              ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f1() public {}
   |              ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f2() public {}
   |              ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f2() public {}
   |              ^^
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f2() public {}
   |              ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f22() public {}
   |              ^^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f22() public {}
   |              ^^^
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f22() public {}
   |              ^^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f5(int) public {}
   |              ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f5(int) public {}
   |              ^^

error: function with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f6(string memory) public {}
   |              ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     function f6(string calldata) public {}
   |              ^^

error: event with same name and parameter types declared twice
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E5() anonymous;
   |           ^^
   |
note: other declaration
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL |     event E5();
   |           ^^

error: aborting due to 19 previous errors

